welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:75: error: ')' expected but '}' found.
    }
    ^PatternPicture:95: error: Unmatched closing brace '}' ignored here
}
^